# hep-concurrency

./: CMakeLists.txt  CMakePresets.json
config/: hep_concurrency-augment-HEP_CONCURRENCY.cmake
hep_concurrency/: CMakeLists.txt  RecursiveMutex.cc  RecursiveMutex.h  SerialTaskQueue.cc  SerialTaskQueue.h  SerialTaskQueueChain.cc  SerialTaskQueueChain.h  ThreadSafeOutputFileStream.cc  ThreadSafeOutputFileStream.h  WaitingTask.cc  WaitingTask.h  WaitingTaskHolder.cc  WaitingTaskHolder.h  WaitingTaskList.cc  WaitingTaskList.h  assert_only_one_thread.h  cache.h  cache_fwd.h  cache_handle.h  simultaneous_function_spawner.h  thread_sanitize.h  tsan.cc  tsan.h
hep_concurrency/detail/: cache_entry.h  cache_hashers.h  cache_key_supports.h
hep_concurrency/test/: CMakeLists.txt  assert_only_one_thread_test.cc  bad_atomic_t.cc  bad_cache_hash_t.cc  bad_cache_no_eq_t.cc  bad_conversion_task_t.cc  bad_entry_for_hint_t.cc  bad_entry_for_t.cc  bad_sanitize_ptr_t.cc  bad_sanitize_t.cc  bad_waiting_task.cc  cache_handle_t.cc  cache_mt_t.cc  cache_t.cc  chain_bad_conversion_task_t.cc  hep_concurrency_bad_conversion_task_t.cc  interval_of_validity.h  make_waiting_task_t.cc  runThreadSafeOutputFileStream_t.sh  sanitizer_compatible_t.cc  serial_task_queue_chain_push_constraints_t.cc  serial_task_queue_chain_t.cc  serial_task_queue_push_constraints_t.cc  serial_task_queue_t.cc  simultaneous_function_spawner_t.cc  task_queue_t.cc  waiting_task_list_t.cc
ups/: product-config.cmake.in  product_deps  setup_for_development
